spec/tests/snapshots/get_apit_feature__show_api@8081-alpine.snap
---
source: spec/tests/get_apit_feature.rs
expression: knative_spec
---
KnativeSpec {
    group: "serving.knative.dev",
    version: "v1",
    kind: "Service",
    container_name: "my-coder",
    svc_image: "alpine",
    port: "8081",
    env: "",
}
