spec/tests/snapshots/get_apit_feature__show_api@label.snap
---
source: spec/tests/get_apit_feature.rs
expression: wrapper
---
KnativeSpecWrapper(
    KnativeSpec {
        group: "serving.knative.dev",
        version: "v1",
        kind: "Service",
        container_name: "my-coder",
        svc_image: "hzgood/my-coder",
        port: "8080",
        env: "",
    },
)
